feature(PWA): Add manifest, icons, and push notifications

--- a/src/molecule-learning-app/molecule-learning-app-styles.html
+++ b/src/molecule-learning-app/molecule-learning-app-styles.html
@@ -8,8 +8,8 @@
             }
 
             app-drawer .menu {
-                background-color: #f494ea;
-                color: white;
+                background-color: white;
+                color: black;
             }
 
             paper-card {
@@ -61,9 +61,9 @@
                 display: block;
                 padding: 0 16px;
                 text-decoration: none;
-                color: var(--app-secondary-color);
+                color: black;
                 line-height: 40px;
-                font-size: 1.2rem;
+                font-size: 1.1rem;
             }
 
             .drawer-list a.iron-selected {
