--- a/index.html
+++ b/index.html
@@ -10,28 +10,84 @@
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
 
+    <!-- See https://goo.gl/qRE0vM -->
+    <meta name="theme-color" content="#fbbc05">
+
+    <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Molecule Learning">
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Molecule Learning">
+
+    <!-- Homescreen icons -->
+    <link rel="apple-touch-icon" href="icons/icon-48x48.png">
+    <link rel="apple-touch-icon" sizes="96x96" href="icons/icon-96x96.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="icons/icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="icons/icon-192x192.png">
+
+    <!-- Tile icon for Windows 8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="icons/icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#f494ea">
+    <meta name="msapplication-tap-highlight" content="no">
+
+
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-
-
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+
+    <link rel="import" href="/src/molecule-learning-app/molecule-learning-app.html" async>
     <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyConVN1dUeAKi9ajNaoLqbDmiwuuj0bLFY",
-            authDomain: "molecule-learning.firebaseapp.com",
-            databaseURL: "https://molecule-learning.firebaseio.com",
-            projectId: "molecule-learning",
-            storageBucket: "molecule-learning.appspot.com",
-            messagingSenderId: "816812956447"
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service-worker.js');
+        }
+
+        let pushNotification = (title, message) => {
+            let options = {
+                body: message,
+                icon: 'icons/icon-144x144.png',
+                vibrate: [100, 50, 100],
+                data: {
+                    dateOfArrival: Date.now(),
+                    primaryKey: 1
+                }
+            };
+
+            if (Notification.permission === 'granted') {
+                navigator.serviceWorker.getRegistration().then(reg => {
+                    if(reg) {
+                        reg.showNotification(title, options);
+                    }
+                });
+            }
+
         };
 
-        document.addEventListener('online', (event) => {
+        document.addEventListener('online', () => {
             'use strict';
+            // Initialize Firebase
+            let config = {
+                apiKey: "AIzaSyConVN1dUeAKi9ajNaoLqbDmiwuuj0bLFY",
+                authDomain: "molecule-learning.firebaseapp.com",
+                databaseURL: "https://molecule-learning.firebaseio.com",
+                projectId: "molecule-learning",
+                storageBucket: "molecule-learning.appspot.com",
+                messagingSenderId: "816812956447"
+            };
+
             firebase.initializeApp(config);
         });
-    </script>
 
-    <link rel="import" href="/src/molecule-learning-app/molecule-learning-app.html">
+        document.addEventListener('offline', () => {
+            'use strict';
+            pushNotification('No tienes internet', 'Por el momento no podemos guardar nuevas preguntas');
+        });
+
+        Notification.requestPermission((status) => {
+            console.log('Notification permission status:', status);
+        });
+    </script>
 </head>
 <body>
 <molecule-learning-app></molecule-learning-app>
